@@ -1,3 +1,10 @@
+2005-02-26  Sebastian Rahtz  <rahtz@spqr-ibm>
+
+	* html/teihtml-layout.xsl: if we meet a "<front>" in paging mode,
+	carry on with body afterwards
+
+	* html/teihtml-main.xsl: test for top-level teiCorpus as well as TEI
+
 2005-02-22  Sebastian Rahtz  <rahtz@spqr-ibm>
 	* version 4.3.4
 	* html/teihtml-front.xsl: rewrite titlePage after suggestions from
